--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
                     <tr>
                         <td>{{ StatusWallet['project_name'] }}</td>
                         <td>{{ StatusWallet['url'] | url_without_query }}</td>
-                        <td>{% if StatusWallet['status'] == 200 %}<span style="color: green;">{{ StatusWallet['status'] }}</span>{% else %}<span style="color: red;">{{ StatusWallet['status'] }}</span>{% endif %}</td>
+                        <td>{% if StatusWallet['status'] == "200" %}<span style="color: green;">{{ StatusWallet['status'] }}</span>{% else %}<span style="color: red;">{{ StatusWallet['status'] }}</span>{% endif %}</td>
                         <td>{{ StatusWallet['last_checked'] }}</td>
                         <td>{{ StatusWallet['status_message'] }}</td>
                     </tr>
